--- a/sass/_responsive.scss
+++ b/sass/_responsive.scss
@@ -50,8 +50,9 @@
 	}
 
 	#map {
-		padding-bottom: 9999px;
-		margin-bottom: -9999px;
+		// padding-bottom: 9999px;
+		// margin-bottom: -9999px;
+		height: 100vh;
 	}
 
 	.form-underlay {
